go-31: verify OTP
