# internal/controller/auth/auth.controller.go
@@ -7,10 +7,10 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-var UserAuth = new(sUserAuth)
-type sUserAuth struct{}
+var UserAuth = new(cUserAuth)
+type cUserAuth struct{}
 
-func (c *sUserAuth) Register(ctx *gin.Context) {
+func (c *cUserAuth) Register(ctx *gin.Context) {
     // Implement logic for register
 	req := vo.RegisterUser_Request{}
 	if err := ctx.ShouldBindJSON(&req); err != nil {
@@ -24,4 +24,26 @@ func (c *sUserAuth) Register(ctx *gin.Context) {
     }
 
     response.SuccessResponse(ctx, int(code), "Register success", res)
+}
+
+// @Summary auth user verify otp
+// @Description When user is registered send otp to email
+// @Accept  json
+// @Produce  json
+// @Tags auth user management
+// @Param 	payload	body vo.VerifyInput true	"payload"
+// @Success		200	{object} 	response.ResponseData
+// @Failure		500	{object} 	response.ErrorResponseData
+// @Router /auth/verify_account [post]
+func (c *cUserAuth) VerifyOTP(ctx *gin.Context) {
+	var params vo.VerifyInput
+	if err := ctx.ShouldBindJSON(&params); err != nil {
+		response.ErrorResponse(ctx, response.CODE_BAD_REQUEST, response.BAD_REQUEST)
+		return
+	}
+	result, err := service.UserAuth().VerifyOTP(ctx, &params)
+	if err != nil {
+		response.ErrorResponse(ctx, response.ErrIOTPInvalid, response.ErrMessageDict()(response.ErrIOTPInvalid))
+	}
+	response.SuccessResponse(ctx, response.CODE_OK, "Xác thực OTP thành công", result)
 }
